# foundry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  validate.sh
.github/workflows/: test.yml
docs/: RUNBOOK_V1.md  architecture.md  assessment-alpha.md  final-review.md  rfc-002-implementation-report.md  rfc-004-1-implementation-report.md  rfc-004-2-implementation-report.md  rfc-004-2-release-blocker-fixes.md  rfc-004-visual-review.md  roadmap.md
docs/specifications/: 000-core-domain-model.md  001-finance-domain-model.md
examples/: alpha_demo.py  finance_demo.py  ingest_exports.py  quickstart.py  real_models.py  seed_mission_control.py  seed_synthetic_household.py
scripts/: render_flight_deck_review.py  validate.py
src/foundry/: __init__.py  canon.py  cli.py  demo_data.py  errors.py  eventlog.py  ingestors.py  kernel.py  mission_control.py  models.py  web.py  webauth.py
src/foundry/core/: __init__.py  decisions.py  entities.py  evidence.py  flight_deck.py  grammar.py  metrics.py  scope.py  (+2 more)
tests/: conftest.py  test_canon.py  test_core_decisions.py  test_core_entities.py  test_core_evidence.py  test_core_flight_deck.py  test_core_grammar_vocab.py  test_core_integration.py  test_core_metrics.py  test_demo_data.py  test_eventlog.py  test_finance_entities.py  test_finance_flight_deck.py  test_finance_household.py  test_finance_metrics.py  test_finance_vocab.py  test_foundry.py  test_kernel_unit.py  test_mission_control.py  test_models_unit.py  test_synthetic_household.py  test_web.py  test_webauth.py
(+7 files in other folders)
