[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-substrate"
version = "1.0.0"
description = "Durable, model-independent, fully provenanced memory over an immutable event log"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Project Foundry" }]
keywords = ["event-sourcing", "provenance", "llm", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
# Zero runtime dependencies. This is a feature, not an accident:
# the substrate must outlive the dependency ecosystem around it.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
web = ["fastapi>=0.110", "uvicorn>=0.30"]
openai = ["openai>=1.50"]
models = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
foundry = "foundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
